# taas-api-client

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
taas_api/: __init__.py  client.py  data.py  enums.py
test/: test_data.py
