[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taas-api-client"
version = "1.2.7"
authors = [
  { name="Tread Labs", email="ops@tread.fi" },
]
description = "API client to interact with the TAAS web API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/tread-labs-public/taas-api-client"
"Bug Tracker" = "https://github.com/tread-labs-public/taas-api-client/issues"
